# umbra-private-agent

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  package.json  tsconfig.json
backend/: config.py  main.py  requirements.txt
backend/db/: __init__.py  database.py
backend/events/: __init__.py  publisher.py  subscriber.py
backend/models/: risk.py
backend/services/: __init__.py  feature_engine.py  prediction_service.py  risk_guardian.py  trade_executor.py  umbra_client.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/presentation/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/simulation/: page.tsx
frontend/src/app/trading/: page.tsx
frontend/src/components/: EncryptedBalances.tsx  HeroBanner.tsx  Navbar.tsx  Pipeline.tsx  UmbraCard.tsx  ViewingKeys.tsx
frontend/src/lib/: api.ts  backtest-data.ts  mock.ts  types.ts
ml/: MODEL_IMPROVEMENT_ANALYSIS.md  backtest.py  backtest_results.json  data_preparation.py  data_preparation_v2.py  fetch_data.py  train_model.py  train_model_comparison.py  train_model_v2.py  train_model_v3.py
ml/models/: metrics_v20260317_161904.json  metrics_v20260318_154155.json  metrics_v20260320_185457.json  metrics_v20260320_190311.json  model_comparison.json  scaler_latest.joblib
programs/umbra_logs/: Cargo.toml
programs/umbra_logs/src/: lib.rs
tests/: umbra_logs.ts
umbra-service/: .env.example  package.json
umbra-service/src/: index.ts  umbra.ts
