[package]
name = "umbra-logs"
version = "0.1.0"
description = "Decision and confidential transfer logging for Umbra Private Agent"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "umbra_logs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
